--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -4,10 +4,10 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_services_ref
-    - field.storage.node.field_conditions_ref
     - field.storage.node.field_location_ref
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
+    - field.storage.node.field_conditions_ref
     - search_api.server.local_development
     - core.entity_view_mode.node.search_index
   module:
@@ -38,6 +38,17 @@ field_settings:
     datasource_id: 'entity:node'
     property_path: 'field_services_ref:entity:title'
     type: text
+    dependencies:
+      config:
+        - field.storage.node.field_services_ref
+      module:
+        - node
+        - node
+  location_services_title_string:
+    label: 'Services » Content » Title » String '
+    datasource_id: 'entity:node'
+    property_path: 'field_services_ref:entity:title'
+    type: string
     dependencies:
       config:
         - field.storage.node.field_services_ref
@@ -167,6 +178,7 @@ processor_settings:
     fields:
       - location_services_condition_name
       - location_services_title
+      - location_services_title_string
       - location_title_string
       - name
       - provider_specialties_condition_name
