--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -2,19 +2,20 @@ uuid: 7673e9bd-f45e-46f5-aca7-b2f255b6da9a
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.storage.node.field_services_ref
-    - field.storage.node.field_location_ref
-    - field.storage.node.field_medical_specialties_ref
-    - field.storage.taxonomy_term.field_related_conditions_ref
-    - field.storage.node.field_conditions_ref
-    - search_api.server.local_development
-    - core.entity_view_mode.node.search_index
   module:
     - node
     - taxonomy
     - search_api_solr
     - search_api
+  config:
+    - field.storage.node.field_location_type
+    - field.storage.node.field_location_ref
+    - field.storage.node.field_medical_specialties_ref
+    - field.storage.taxonomy_term.field_related_conditions_ref
+    - field.storage.node.field_services_ref
+    - field.storage.node.field_conditions_ref
+    - search_api.server.local_development
+    - core.entity_view_mode.node.search_index
 id: towerhealth
 name: TowerHealth
 description: ''
@@ -66,6 +67,17 @@ field_settings:
       module:
         - node
         - node
+  location_type_string:
+    label: 'Location Type » Taxonomy term » Name » String '
+    datasource_id: 'entity:node'
+    property_path: 'field_location_type:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_location_type
+      module:
+        - taxonomy
+        - taxonomy
   name:
     label: Name
     datasource_id: 'entity:taxonomy_term'
@@ -180,6 +192,7 @@ processor_settings:
       - location_services_title
       - location_services_title_string
       - location_title_string
+      - location_type_string
       - name
       - provider_specialties_condition_name
       - provider_specialties_name
