--- a/config/sites/default/facets.facet.location_type.yml
+++ b/config/sites/default/facets.facet.location_type.yml
@@ -16,16 +16,10 @@ show_only_one_result: false
 field_identifier: location_type_string
 facet_source_id: 'search_api:views_page__find_a_location__find_location'
 widget:
-  type: checkbox
+  type: dropdown
   config:
     show_numbers: false
-    soft_limit: 0
-    soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
-    show_reset_link: false
-    reset_text: 'Show all'
-    hide_reset_when_no_selection: false
+    default_option_label: Choose
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
