--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.yml
@@ -1,11 +1,18 @@
 social:
-  facebook: "#"
-  gplus: "#"
-  instagram: "#"
-  linkedin: "#"
-  pinterest: "#"
-  twitter: "#"
-  youtube: "#"
+  - url: "/"
+    svg: "social-facebook.svg"
+  - url: "#"
+    svg: "social-twitter.svg"
+  - url: "/"
+    svg: "social-gplus.svg"
+  - url: "#"
+    svg: "social-linkedin.svg"
+  - url: "#"
+    svg: "social-youtube.svg"
+  - url: "#"
+    svg: "social-instagram.svg"
+  - url: "#"
+    svg: "social-pinterest.svg"
 contact:
   address: "420 S. Fifth Avenue, West Reading, PA 19611"
   phone: "484-628-8000"
