--- a/config/sites/default/core.entity_view_display.paragraph.rating_comments.default.yml
+++ b/config/sites/default/core.entity_view_display.paragraph.rating_comments.default.yml
@@ -17,15 +17,15 @@ bundle: rating_comments
 mode: default
 content:
   field_rating_comment_body:
-    weight: 0
-    label: above
+    weight: 3
+    label: inline
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_rating_comment_date:
     weight: 2
-    label: above
+    label: inline
     settings:
       format_type: medium
       timezone_override: ''
@@ -33,8 +33,8 @@ content:
     type: datetime_default
     region: content
   field_rating_comment_id:
-    weight: 3
-    label: above
+    weight: 0
+    label: inline
     settings:
       thousand_separator: ''
       prefix_suffix: true
@@ -42,8 +42,8 @@ content:
     type: number_integer
     region: content
   field_rating_comment_rating:
-    weight: 4
-    label: above
+    weight: 1
+    label: inline
     settings:
       thousand_separator: ''
       decimal_separator: .
