The find a provider view is updated to include the synonym field via the medical specialty reference

--- a/config/sites/default/views.view.find_a_provider.yml
+++ b/config/sites/default/views.view.find_a_provider.yml
@@ -178,6 +178,7 @@ display:
           min_length: null
           fields:
             - provider_specialties_condition_name
+            - provider_specialties_condition_synonym
             - provider_specialties_name
             - rendered_item
             - title
