--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/readonly_field_widget": "^1.3",
         "drupal/redirect": "^1.4",
+        "drupal/schema_metatag": "^1.4",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
         "drupal/workbench": "^1.1",
