update autocomplete view and code for multiple fields under taxonomy search index fields

--- a/config/sites/default/views.view.auto_synonym.yml
+++ b/config/sites/default/views.view.auto_synonym.yml
@@ -232,7 +232,7 @@ display:
           parse_mode: terms
           min_length: null
           fields:
-            - provider_specialties_condition_synonym
+            - synonym
           plugin_id: search_api_fulltext
       sorts: {  }
       header: {  }
