--- a/config/sites/default/views.view.auto_synonyms.yml
+++ b/config/sites/default/views.view.auto_synonyms.yml
@@ -1,14 +1,13 @@
-uuid: 2395cbf8-a62b-4721-b7ab-16ad97ece557
+uuid: 64539aa7-078d-483d-bba9-1174db610d3f
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.taxonomy_term.field_condition_synonym
     - search_api.index.towerhealth
   module:
     - search_api
-id: auto_synonym
-label: 'Autocomplete: Synonym'
+id: auto_synonyms
+label: 'Autocomplete: Synonyms'
 module: views
 description: ''
 tag: ''
@@ -67,8 +66,7 @@ display:
         options:
           grouping: {  }
           row_class: ''
-          default_row_class: true
-          uses_fields: false
+          default_row_class: false
       row:
         type: fields
         options:
@@ -77,10 +75,10 @@ display:
           separator: ''
           hide_empty: false
       fields:
-        field_condition_synonym:
-          id: field_condition_synonym
+        name_1:
+          id: name_1
           table: search_api_datasource_towerhealth_entity_taxonomy_term
-          field: field_condition_synonym
+          field: name
           relationship: none
           group_type: group
           admin_label: ''
@@ -149,8 +147,8 @@ display:
           entity_type: taxonomy_term
           plugin_id: search_api_field
       filters:
-        vid:
-          id: vid
+        vid_1:
+          id: vid_1
           table: search_api_index_towerhealth
           field: vid
           relationship: none
@@ -160,7 +158,7 @@ display:
           value:
             min: ''
             max: ''
-            value: condition
+            value: synonyms
           group: 1
           exposed: false
           expose:
@@ -232,7 +230,7 @@ display:
           parse_mode: terms
           min_length: null
           fields:
-            - synonym
+            - name
           plugin_id: search_api_fulltext
       sorts: {  }
       header: {  }
@@ -241,6 +239,10 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
+      filter_groups:
+        operator: AND
+        groups:
+          1: OR
     cache_metadata:
       max-age: -1
       contexts:
@@ -248,5 +250,4 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-      tags:
-        - 'config:field.storage.taxonomy_term.field_condition_synonym'
+      tags: {  }
