--- a/config/sites/default/core.entity_form_display.taxonomy_term.condition.default.yml
+++ b/config/sites/default/core.entity_form_display.taxonomy_term.condition.default.yml
@@ -22,12 +22,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_condition_synonym:
-    weight: 33
+    weight: 31
     settings:
+      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
+    type: entity_reference_autocomplete
     region: content
   name:
     type: string_textfield
