--- a/config/sites/default/core.entity_view_display.taxonomy_term.condition.default.yml
+++ b/config/sites/default/core.entity_view_display.taxonomy_term.condition.default.yml
@@ -20,12 +20,12 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_condition_synonym:
-    weight: 3
+    weight: 1
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
 hidden:
   search_api_excerpt: true
