Revert "update views and field taxonomies for better filter results since synonym was text field the term_name parameter was not looping through to get all term values"
This reverts commit 2f5c83cd7b860f4480a370f6d8d884c9ebd1607f.

--- a/config/sites/default/core.entity_form_display.taxonomy_term.condition.default.yml
+++ b/config/sites/default/core.entity_form_display.taxonomy_term.condition.default.yml
@@ -22,13 +22,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_condition_synonym:
-    weight: 31
+    weight: 33
     settings:
-      match_operator: CONTAINS
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: string_textfield
     region: content
   name:
     type: string_textfield
