--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -8,10 +8,14 @@ dependencies:
     - search_api_solr
     - search_api
   config:
+    - field.storage.node.field_profile_gender
+    - field.storage.node.field_insurance_ref
+    - field.storage.node.field_profile_languages
     - field.storage.node.field_location_type
     - field.storage.node.field_location_ref
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
+    - field.storage.node.field_profile_type
     - field.storage.node.field_services_ref
     - field.storage.node.field_conditions_ref
     - search_api.server.local_development
@@ -56,7 +60,34 @@ field_settings:
       module:
         - node
         - node
-  location_title_string:
+  name:
+    label: Name
+    datasource_id: 'entity:taxonomy_term'
+    property_path: name
+    type: solr_text_ngram
+    dependencies:
+      module:
+        - taxonomy
+  profile_gender_string:
+    label: 'Gender » String'
+    datasource_id: 'entity:node'
+    property_path: field_profile_gender
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_profile_gender
+  provider_insurance_groups_string:
+    label: 'Insurance accepted » Taxonomy term » Name » String'
+    datasource_id: 'entity:node'
+    property_path: 'field_insurance_ref:entity:name'
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_insurance_ref
+      module:
+        - taxonomy
+        - taxonomy
+  provider_location_title_string:
     label: 'Location » Content » Title'
     datasource_id: 'entity:node'
     property_path: 'field_location_ref:entity:title'
@@ -67,7 +98,7 @@ field_settings:
       module:
         - node
         - node
-  location_type_string:
+  provider_location_type_string:
     label: 'Location Type » Taxonomy term » Name » String'
     datasource_id: 'entity:node'
     property_path: 'field_location_type:entity:name'
@@ -78,14 +109,22 @@ field_settings:
       module:
         - taxonomy
         - taxonomy
-  name:
-    label: Name
-    datasource_id: 'entity:taxonomy_term'
-    property_path: name
-    type: solr_text_ngram
+  provider_profile_languages_string:
+    label: 'Languages » String'
+    datasource_id: 'entity:node'
+    property_path: field_profile_languages
+    type: string
     dependencies:
-      module:
-        - taxonomy
+      config:
+        - field.storage.node.field_profile_languages
+  provider_profile_type:
+    label: 'Provider Type'
+    datasource_id: 'entity:node'
+    property_path: field_profile_type
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_profile_type
   provider_specialties_condition_name:
     label: 'Medical Specialties » Taxonomy term » Related Conditions » Taxonomy term » Name'
     datasource_id: 'entity:node'
@@ -191,9 +230,13 @@ processor_settings:
       - location_services_condition_name
       - location_services_title
       - location_services_title_string
-      - location_title_string
-      - location_type_string
       - name
+      - profile_gender_string
+      - provider_insurance_groups_string
+      - provider_location_title_string
+      - provider_location_type_string
+      - provider_profile_languages_string
+      - provider_profile_type
       - provider_specialties_condition_name
       - provider_specialties_name
       - provider_specialties_name_string
