--- a/config/sites/default/facets.facet.location.yml
+++ b/config/sites/default/facets.facet.location.yml
@@ -1,4 +1,4 @@
-uuid: 28087482-c6a1-4eb0-aaf7-ebd35c21e875
+uuid: f3846bd0-3b62-4597-a199-28456d10b63b
 langcode: en
 status: true
 dependencies:
@@ -7,25 +7,19 @@ dependencies:
     - views.view.find_a_provider
   module:
     - search_api
-id: location_content_title
+id: location
 name: 'Location » Content » Title'
-url_alias: location_content_title
+url_alias: location
 weight: 0
 min_count: 1
 show_only_one_result: false
-field_identifier: location_title_string
+field_identifier: provider_location_title_string
 facet_source_id: 'search_api:views_page__find_a_provider__find_doctor'
 widget:
-  type: links
+  type: dropdown
   config:
     show_numbers: false
-    soft_limit: 0
-    soft_limit_settings:
-      show_less_label: 'Show less'
-      show_more_label: 'Show more'
-    show_reset_link: false
-    reset_text: 'Show all'
-    hide_reset_when_no_selection: false
+    default_option_label: Choose
 query_operator: or
 use_hierarchy: false
 expand_hierarchy: false
