--- a/config/sites/default/search_api.index.towerhealth.yml
+++ b/config/sites/default/search_api.index.towerhealth.yml
@@ -2,35 +2,51 @@ uuid: 7673e9bd-f45e-46f5-aca7-b2f255b6da9a
 langcode: en
 status: true
 dependencies:
+  config:
+    - field.storage.node.field_services_ref
+    - field.storage.node.field_medical_specialties_ref
+    - field.storage.taxonomy_term.field_related_conditions_ref
+    - field.storage.taxonomy_term.field_condition_synonym
+    - field.storage.node.field_location_type
+    - field.storage.node.field_location_ref
+    - search_api.server.local_development
+    - core.entity_view_mode.node.search_index
   module:
     - node
     - taxonomy
     - search_api_solr
     - search_api
-  config:
-    - field.storage.node.field_location_type
-    - field.storage.node.field_location_ref
-    - field.storage.node.field_medical_specialties_ref
-    - field.storage.taxonomy_term.field_related_conditions_ref
-    - field.storage.taxonomy_term.field_condition_synonym
-    - field.storage.node.field_services_ref
-    - field.storage.node.field_conditions_ref
-    - search_api.server.local_development
-    - core.entity_view_mode.node.search_index
 id: towerhealth
 name: TowerHealth
 description: ''
 read_only: false
 field_settings:
-  location_services_condition_name:
-    label: 'Services » Content » Related Conditions » Taxonomy term » Name'
+  location_services_specialty_condition_name:
+    label: 'Available Services » Content » Medical Specialties » Taxonomy term » Related Conditions » Taxonomy term » Name'
     datasource_id: 'entity:node'
-    property_path: 'field_services_ref:entity:field_conditions_ref:entity:name'
+    property_path: 'field_services_ref:entity:field_medical_specialties_ref:entity:field_related_conditions_ref:entity:name'
     type: text
     dependencies:
       config:
         - field.storage.node.field_services_ref
-        - field.storage.node.field_conditions_ref
+        - field.storage.node.field_medical_specialties_ref
+        - field.storage.taxonomy_term.field_related_conditions_ref
+      module:
+        - node
+        - taxonomy
+        - taxonomy
+        - taxonomy
+  location_services_specialty_condition_synonym:
+    label: 'Available Services » Content » Medical Specialties » Taxonomy term » Related Conditions » Taxonomy term » Synonyms'
+    datasource_id: 'entity:node'
+    property_path: 'field_services_ref:entity:field_medical_specialties_ref:entity:field_related_conditions_ref:entity:field_condition_synonym'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_services_ref
+        - field.storage.node.field_medical_specialties_ref
+        - field.storage.taxonomy_term.field_related_conditions_ref
+        - field.storage.taxonomy_term.field_condition_synonym
       module:
         - node
         - taxonomy
@@ -39,7 +55,7 @@ field_settings:
     label: 'Services » Content » Title'
     datasource_id: 'entity:node'
     property_path: 'field_services_ref:entity:title'
-    type: text
+    type: solr_text_ngram
     dependencies:
       config:
         - field.storage.node.field_services_ref
@@ -210,7 +226,8 @@ processor_settings:
   ignorecase:
     all_fields: true
     fields:
-      - location_services_condition_name
+      - location_services_specialty_condition_name
+      - location_services_specialty_condition_synonym
       - location_services_title
       - location_services_title_string
       - location_title_string
