--- a/config/sites/default/field.field.node.service.field_medical_specialties_ref.yml
+++ b/config/sites/default/field.field.node.service.field_medical_specialties_ref.yml
@@ -1,26 +1,26 @@
-uuid: e2faec08-1479-44a2-ac03-aee31bf0110d
+uuid: a0596ebb-7138-436e-8916-6904a658d6b9
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_conditions_ref
+    - field.storage.node.field_medical_specialties_ref
     - node.type.service
-    - taxonomy.vocabulary.condition
-id: node.service.field_conditions_ref
-field_name: field_conditions_ref
+    - taxonomy.vocabulary.medical_specialty
+id: node.service.field_medical_specialties_ref
+field_name: field_medical_specialties_ref
 entity_type: node
 bundle: service
-label: 'Related Conditions'
+label: 'Medical Specialties'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      condition: condition
+      medical_specialty: medical_specialty
     sort:
       field: name
       direction: asc
