--- a/config/sites/default/views.view.auto_synonym.yml
+++ b/config/sites/default/views.view.auto_synonym.yml
@@ -45,23 +45,10 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: mini
+        type: some
         options:
           items_per_page: 10
           offset: 0
-          id: 0
-          total_pages: null
-          expose:
-            items_per_page: false
-            items_per_page_label: 'Items per page'
-            items_per_page_options: '5, 10, 25, 50'
-            items_per_page_options_all: false
-            items_per_page_options_all_label: '- All -'
-            offset: false
-            offset_label: Offset
-          tags:
-            previous: ‹‹
-            next: ››
       style:
         type: default
         options:
@@ -77,10 +64,10 @@ display:
           separator: ''
           hide_empty: false
       fields:
-        field_condition_synonym:
-          id: field_condition_synonym
-          table: search_api_datasource_towerhealth_entity_taxonomy_term
-          field: field_condition_synonym
+        synonym:
+          id: synonym
+          table: search_api_index_towerhealth
+          field: synonym
           relationship: none
           group_type: group
           admin_label: ''
@@ -139,14 +126,13 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          field_rendering: true
+          field_rendering: false
           fallback_handler: search_api
           fallback_options:
             link_to_item: false
             use_highlighting: false
             multi_type: separator
             multi_separator: ', '
-          entity_type: taxonomy_term
           plugin_id: search_api_field
       filters:
         vid:
@@ -234,7 +220,19 @@ display:
           fields:
             - synonym
           plugin_id: search_api_fulltext
-      sorts: {  }
+      sorts:
+        search_api_relevance:
+          id: search_api_relevance
+          table: search_api_index_towerhealth
+          field: search_api_relevance
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          plugin_id: search_api
       header: {  }
       footer: {  }
       empty: {  }
@@ -247,6 +245,5 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url
-        - url.query_args
       tags:
         - 'config:field.storage.taxonomy_term.field_condition_synonym'
