Update module name.

--- a/config/sites/default/migrate_plus.migration.towerhealth_ratings_comments.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_ratings_comments.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   enforced:
     module:
-      - towerhealth_migration
+      - towerhealth_rating_migration
 id: towerhealth_ratings_comments
 class: null
 field_plugin_method: null
