--- a/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_ratings.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   enforced:
     module:
-      - towerhealth_migration
+      - towerhealth_rating_migration
 _core:
   default_config_hash: LQeYBQFFFHmnYYXOjn8qvWMS44m3ME6PM7ETlirQb7c
 id: towerhealth_ratings
