stray configs not commited

--- a/config/sites/default/core.entity_view_display.node.service.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.service.teaser.yml
@@ -26,4 +26,5 @@ hidden:
   field_area_of_care_ref: true
   field_body: true
   field_conditions_ref: true
+  field_medical_specialties_ref: true
   search_api_excerpt: true
