--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -37,6 +37,7 @@ module:
   media: 0
   media_library: 0
   menu_ui: 0
+  metatag: 0
   migrate: 0
   migrate_plus: 0
   migrate_source_csv: 0
@@ -54,6 +55,7 @@ module:
   redirect: 0
   rh_node: 0
   rh_taxonomy: 0
+  schema_metatag: 0
   search_api: 0
   search_api_solr: 0
   serialization: 0
