TH-283 provider list

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-teaser/provider-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-teaser/provider-teaser.yml
@@ -1,13 +1,14 @@
-img:
-  src: "https://www.placeimg.com/500/500/any"
-  alt: "Alternative Text"
-button:
-  href: "/"
-  src: ""
-  alt: "Alternative Text"
 provider:
-  name: "Donald E. Roland, MD, DMD"
-  specialties: "Oral and Maxillofacial Surgery"
-  focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
-  location: "Pottstown, PA"
-  language: "English"
+  img:
+    src: "https://www.placeimg.com/500/500/any"
+    alt: "Alternative Text"
+  button:
+    href: "/"
+    src: ""
+    alt: "Alternative Text"
+  details:
+    name: "Donald E. Roland, MD, DMD"
+    specialties: "Oral and Maxillofacial Surgery"
+    focus: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+    location: "Pottstown, PA"
+    language: "English"
